--- a/auth.html
+++ b/auth.html
@@ -200,4 +200,8 @@
         });
     </script>
 </body>
-</html>
+</html><script>
+window.onerror = function(msg, src, line) {
+    document.body.innerHTML += '<div style="position:fixed;bottom:0;left:0;right:0;background:red;color:white;padding:20px;font-size:14px;z-index:999999">' + msg + ' | Line: ' + line + '</div>';
+}
+</script>
