fix: disable checkHandshake on load

--- a/auth.html
+++ b/auth.html
@@ -174,7 +174,7 @@
             } else {
                 showSovereignStatus('success', 'Clearance Confirmed', 'Decrypting terminal...');
                 const { data: prof } = await supabase.from('users').select('role').eq('id', data.user.id).single();
-                setTimeout(() => window.location.replace("dashboard.html"), 1500);
+                setTimeout(() => { window.location.href = "dashboard.html"; }, 1500);
             }
         });
 
