--- a/chat.html
+++ b/chat.html
@@ -17,7 +17,8 @@
 
         body {
             background-color: var(--shark-bg);
-            height: 100vh; width: 100vw; margin: 0;
+            height: 100vh; height: 100dvh;
+            width: 100vw; margin: 0;
             display: flex; flex-direction: column; overflow: hidden;
             font-family: 'Plus Jakarta Sans', sans-serif;
         }
@@ -82,18 +83,26 @@
         .room-card.active { background: #f5f3ff; border-color: var(--shark-indigo); }
 
         /* CHAT CONSOLE */
-        .chat-console { flex: 1; display: flex; flex-direction: column; background: white; overflow: hidden; }
+        .chat-console { flex: 1; display: flex; flex-direction: column; background: white; overflow: hidden; min-height: 0; }
         .chat-header-bar {
             height: 90px; padding: 0 3.5rem; border-bottom: 1px solid var(--shark-border);
             display: flex; align-items: center; justify-content: space-between; cursor: pointer;
         }
-        .msg-scroll  { flex: 1; overflow-y: auto; padding: 2rem 3.5rem; display: flex; flex-direction: column; gap: 10px; scroll-behavior: smooth; }
+        .msg-scroll  { flex: 1; overflow-y: auto; padding: 2rem 3.5rem; display: flex; flex-direction: column; gap: 10px; scroll-behavior: smooth; min-height: 0; }
 
         .bubble { max-width: 65%; padding: 1.1rem 1.4rem; border-radius: 25px; font-size: 0.95rem; line-height: 1.5; position: relative; }
         .sent     { align-self: flex-end; background: var(--shark-indigo); color: white; border-bottom-right-radius: 4px; }
         .received { align-self: flex-start; background: #f8fafc; border: 1px solid var(--shark-border); border-bottom-left-radius: 4px; }
 
-        .input-bar { height: 110px; padding: 0 3.5rem; border-top: 1px solid var(--shark-border); display: flex; align-items: center; }
+        .input-bar {
+            min-height: 80px; padding: 0 3.5rem;
+            border-top: 1px solid var(--shark-border);
+            display: flex; align-items: center;
+            background: white;
+            position: sticky; bottom: 0;
+            flex-shrink: 0;
+            z-index: 100;
+        }
         .glass-input {
             width: 100%; background: #f8fafc; border: 2px solid var(--shark-border);
             border-radius: 50px; padding: 10px 30px; display: flex; align-items: center; gap: 15px;
@@ -126,6 +135,32 @@
             border: 1px solid #fca5a5; white-space: nowrap; z-index: 100;
         }
 
+
+        /* MOBILE FIXES */
+        @media (max-width: 768px) {
+            .trinity-nav {
+                grid-template-columns: 1fr auto;
+                padding: 0 20px;
+                height: 60px;
+            }
+            .nav-center { display: none; }
+            .channel-sidebar {
+                width: 100%;
+                position: absolute;
+                top: 60px; left: 0; right: 0; bottom: 0;
+                z-index: 200;
+                transition: transform 0.3s ease;
+            }
+            .channel-sidebar.hidden-mobile {
+                transform: translateX(-100%);
+                pointer-events: none;
+            }
+            .chat-console { width: 100%; }
+            .input-bar { padding: 0 1rem; min-height: 70px; }
+            .glass-input { padding: 8px 16px; }
+            .msg-scroll { padding: 1rem; }
+            .chat-header-bar { padding: 0 1rem; height: 65px; }
+        }
         .hidden { display: none !important; }
     </style>
 </head>
@@ -167,7 +202,7 @@
                 <p style="font-weight:800; text-transform:uppercase;">Initialize Link</p>
             </div>
 
-            <div id="chatWindow" class="hidden" style="display:flex; flex-direction:column; height:100%;">
+            <div id="chatWindow" class="hidden" style="display:flex; flex-direction:column; height:100%; min-height:0; overflow:hidden;">
                 <div class="chat-header-bar" onclick="openPartnerAudit()">
                     <div style="display:flex; align-items:center; gap:15px;">
                         <div id="headerAvatar" style="width:45px; height:45px; background:var(--shark-obsidian); border-radius:50%; display:flex; align-items:center; justify-content:center; color:white; font-weight:800; font-size:1.1rem;">?</div>
